// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot when status is Completed 1`] = `
<div>
  <div
    class=""
    title="Completed"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-check SuccessIcon__ColoredIcon-sc-j6z8ag-0 bxpNyP"
      data-icon="circle-check"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`matches the snapshot when status is Error 1`] = `
<div>
  <div
    class=""
    title="Error"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-exclamation ErrorIcon__ColoredIcon-sc-1n9o5bs-0 dsJgQQ"
      data-icon="circle-exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM232 152C232 138.8 242.8 128 256 128s24 10.75 24 24v128c0 13.25-10.75 24-24 24S232 293.3 232 280V152zM256 400c-17.36 0-31.44-14.08-31.44-31.44c0-17.36 14.07-31.44 31.44-31.44s31.44 14.08 31.44 31.44C287.4 385.9 273.4 400 256 400z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`matches the snapshot when status is Processing 1`] = `
<div>
  <div
    class=""
    title="Processing"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</div>
`;
